microsoft login done

--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -436,7 +436,7 @@
                                         </div>
                                     </div>
                                     <div class="enter_event_title last_payment">
-                                        <p class="text-white">I would like Aso Ebi to handle the delivery of my fabric
+                                        <p class="text-white">Instant transfer to my account
                                         </p>
                                     </div>
                                     <div class="handle_delivary">
