--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -117,7 +117,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="First Name" pattern="[a-zA-Z]+"
-                                        name="fname" (input)="validateFirstName(signUpForm.value)" id="firstName"
+                                         (input)="validateFirstName(signUpForm.value)" id="firstName"
                                         class="form-control" formControlName="firstName"
                                         [ngClass]="{ 'is-invalid': f.firstName.touched && f.firstName.errors }">
                                     <div id="message1"></div>
@@ -133,7 +133,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Last Name" pattern="[a-zA-Z]+"
-                                        name="lname" formControlName="lastName"
+                                         formControlName="lastName"
                                         (input)="validateLastName(signUpForm.value)" id="lastName"
                                         [ngClass]="{ 'is-invalid': f.lastName.touched && f.lastName.errors }">
                                     <div id="message2"></div>
@@ -148,10 +148,10 @@
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="text" class="form-control w-100" placeholder="Mobile Number" name="no"
+                                    <input type="text" minlength="10" maxlength="10"  class="form-control w-100" placeholder="Mobile Number" 
                                         formControlName="mobile" (input)="validatePhone(signUpForm.value)" id="mobile"
                                         [ngClass]="{ 'is-invalid': f.mobile.touched && f.mobile.errors }">
-                                    <div class="text-white" id="message"></div>
+                                        <span id="message3" class="w-100 text-white"></span>
                                     <div *ngIf="f.mobile.touched && f.mobile.errors"
                                         class="invalid-feedback text-white text-left">
                                         <div *ngIf="f.mobile.errors.minlength">Phone must be only 10 digits</div>
