--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -4,6 +4,10 @@
     width: 50px;
     height: 50px;;
 }
+a.ui-datepicker-next.ui-corner-all:after {
+    content: ">";
+    margin: 10px;
+}
 
 /* .active_background {
     background-image: url(/assets/images/yes.png);
