admin panel issue resolved

--- a/src/styles.css
+++ b/src/styles.css
@@ -9104,7 +9104,7 @@ a.ui-datepicker-prev.ui-corner-all
 		padding-left: 0px;
 	}
 	.event-count-box-scroll{
-		margin: 0 4px;
+		margin: 8px 4px;
 	}
 	.fabric_name {
 		width: 30%;
