--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,19 @@
-<!-- Admin Panel header section -->
-<div class="header" *ngIf="adminUser == 'admin'">
-  <a id="menu-action">
-    <i class="fa fa-bars"></i>
-  </a>
-  <div class="logo">
-    Admin Panel
-  </div>
-  <div class="sidebar">
-    <ul>
-      <li><a><i class="fa fa-th-list" aria-hidden="true"></i><span>Dashboard</span></a></li>
-      <!-- <li><a><i class="fa fa-th-list" aria-hidden="true"></i><span>Total Users</span></a></li>
-      <li><a><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
-      <li><a><i class="fa fa-calendar"></i><span>Settings</span></a></li> -->
-      <li><a (click)="logout()"><i class="fa fa-th-list" aria-hidden="true"></i><span>LogOut</span></a></li>
-    </ul>
+<div [hidden]="!adminUser == 'admin'">
+  <div class="header" >
+    <a id="menu-action" >
+      <i class="fa fa-bars"></i>
+    </a>
+    <div class="logo">
+      Admin Panel
+    </div>
+    <div class="sidebar">
+      <ul>
+        <li><a><i class="fa fa-th-list" aria-hidden="true"></i><span>Dashboard</span></a></li>
+        <!-- <li><a><i class="fa fa-th-list" aria-hidden="true"></i><span>Total Users</span></a></li>
+        <li><a><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
+        <li><a><i class="fa fa-calendar"></i><span>Settings</span></a></li> -->
+        <li><a (click)="logout()"><i class="fa fa-th-list" aria-hidden="true"></i><span>LogOut</span></a></li>
+      </ul>
+    </div>
   </div>
 </div>
